[level 2] Title: [1차] 캐시, Time: 33.11 ms, Memory: 109 MB -BaekjoonHub